# cppcourse-brunel

./: CMakeLists.txt  Doxyfile  FigureA.txt  FigureB.txt  FigureC.txt  FigureD.txt  Finalgraphs(1).ipynb  Finalgraphs.py  Graphs.ipynb  README.md  Spikes.txt  experiment.cpp  experiment.hpp  figureA.txt  figureB.txt  figureC.txt  figureD.txt  gmon.out  gprof2dot.py  mySpikes.txt  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuron.out  neuron.py  neuron_excitatory.cpp  neuron_excitatory.hpp  neuron_inhibitory.cpp  neuron_inhibitory.hpp  neuron_main.cpp  unittest.cpp
src/: CMakeLists.txt  CMakeLists.txt~  all.sh  connexion.cpp  connexion.hpp  experiment.cpp  experiment.hpp  mySpikes.txt  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuron_excitatory.cpp  neuron_excitatory.hpp  neuron_inhibitory.cpp  neuron_inhibitory.hpp  neuron_main.cpp
